--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-s3": "^3.335.0",
     "@metric-im/componentry": "^1.3.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "jimp": "^0.22.8"
   }
 }
