--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@aws-sdk/client-s3": "^3.335.0",
     "@metric-im/componentry": "^1.3.0",
     "axios": "^1.4.0",
+    "bson": "^6.7.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "mongodb": "^6.6.1",
     "sharp": "^0.32.1"
   }
 }
