--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.335.0",
     "@metric-im/componentry": "^1.3.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.4.0",
     "bson": "^6.7.0",
     "express": "^4.18.2",
